added CSRF Protection

--- a/templates/calcolo.html
+++ b/templates/calcolo.html
@@ -11,6 +11,7 @@
          <div class="title">Confronto Fattura n° {{numero_fattura}}</div>
          <div class="content">
             <form action="confronto" method="post">
+               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                <div class="user-details">
                   <div class="input-box">
                      <span class="details">F1</span>
