--- a/templates/confronto.html
+++ b/templates/confronto.html
@@ -11,6 +11,7 @@
          <div class="title">Risparmio in euro €</div>
          <div class="content">
             <form action="dati" method="post">
+               <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                <div class="user-details">
                   <div class="input-box">
                      <span class="details">F1</span>
